Bug 124704 - No values of variables shown by mouseover in BASIC
Summary: No values of variables shown by mouseover in BASIC
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
6.0.7.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-04-12 14:27 UTC by Azo
Modified: 2019-04-30 13:07 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Azo 2019-04-12 14:27:57 UTC
Description:
I am using Version: 6.0.7.3 Build-ID: 1:6.0.7-0ubuntu0.18.04.2 on Linux Mint Mate 19.1. When halting a BASIC-Program, the values of variables should be shown by mouseover the name of the variable. This worked for me in former versions of LibreOffice, but not now. I tried with 2 different Laptops.


Steps to Reproduce:
1.Sub Main
x=6
End Sub
2.Set a Stop to "End Sub"
3.Hover the Mouse over "x" - nothing happens

Actual Results:
nothing happens

Expected Results:
the value "6" should be shown


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
none
Comment 1 Oliver Brinzing 2019-04-12 16:38:12 UTC
no repro with:

Version: 6.0.7.3 (x64)
Build-ID: dc89aa7a9eabfd848af146d5086077aeed2ae4a5
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc: 

Version: 6.2.3.1 (x64)
Build-ID: 9ba025bafb03b962c34687cf87806cc03a3a7436
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

maybe linux only ?
Comment 2 Azo 2019-04-12 18:35:14 UTC
I do confirm. Seems to be a problem only in Linux. 

Installed the 6.0.7.3 (x86) in a virtual machine with win 7 and it works out of the box.

Not so on (my) Mint-Notebooks.
Comment 3 raal 2019-04-13 05:54:51 UTC
Confirm with Version: 6.3.0.0.alpha0+
Build ID: 31ac398cfa30694b18240d31df17a58d699b5bf6
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 

it works in Version: 4.5.0.0.alpha0+
Build ID: 2851ce5afd0f37764cbbc2c2a9a63c7adc844311
Comment 4 raal 2019-04-28 06:29:33 UTC
Looks like GTK3 problem for me. when I run 
SAL_USE_VCLPLUGIN=gen  -> tooltips are present
SAL_USE_VCLPLUGIN=gtk3  -> tooltips are missing

Tested with Version: 6.0.6.0.0+
Build ID: c6c82096301180cfa7942dd9fb9d1cb66c7ecc04
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Version: 6.0.6.0.0+
Build ID: c6c82096301180cfa7942dd9fb9d1cb66c7ecc04
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11;

adding cc to Caolán
Comment 5 Commit Notification 2019-04-28 16:32:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a7c2f1580e928d13d02d778639a0f26de728b5be%5E%21

Resolves: tdf#124704 need to state the area the tooltip is for

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2019-04-29 10:00:30 UTC
works in master now, backport for 6-2 in gerrit
Comment 7 Xisco Faulí 2019-04-30 08:01:20 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: f45f8d0c6eb1d5d28a92399b82d13c2894f06069
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 8 Commit Notification 2019-04-30 13:07:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/45d2f8a4bdd2c805b11ab374fb4946a2c079e7ee%5E%21

Resolves: tdf#124704 need to state the area the tooltip is for

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.