Resolves: tdf#124704 need to state the area the tooltip is for

to make it work under gtk3

Change-Id: I4c895181af233a16292ce16b194f0a60994446fb
Reviewed-on: https://gerrit.libreoffice.org/71479
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>